# weather_cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release-on-approval.yml  request-release.yml  test.yml
src/: cache.rs  display.rs  lib.rs  location.rs  main.rs  types.rs  weather.rs
