[package]
name = "weather_cli"
version = "0.1.7"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tabled = "0.19.0"

[profile.release]
opt-level = 3       # 0 to 3, or "s" (size), "z" (smaller)
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization, slower compile
strip = true        # Remove debug symbols (smaller binary)
